--- a/src/app/(App-wrapper)/globals.css
+++ b/src/app/(App-wrapper)/globals.css
@@ -74,3 +74,12 @@
     @apply bg-background text-foreground;
   }
 }
+.hide-scroll::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.hide-scroll {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
